UI fix: Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -387,7 +387,7 @@ h1 {
 
 .weekday-section {
   display: grid;
-  grid-template-columns: 85px 60px 30px 50px 10px 40px;
+  grid-template-columns: 85px 60px 30px 35px 10px 40px;
   align-items: center;
   justify-content: center;
   column-gap: 10px;
